wire everything up

--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,12 @@
 PORT=8080
+PG_DB_HOST=localhost
+PG_DB_PORT=5432
+PG_DB_USER=postgres
+PG_DB_PASS=password
+PG_DB_NAME=memeindex
+PG_DB_SSL_MODE=disable
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=minio
+MINIO_ACCESS_KEY_ID=minio123
+MINIO_BUCKET_NAME=memeindex
+MINIO_USE_SSL=false
