--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,15 +20,9 @@ tasks:
     cmds:
       - go install github.com/deepmap/oapi-codegen/cmd/oapi-codegen@v1.16.3
       - mkdir -p ./gen/openapi/memeapi
-      - |
-        oapi-codegen -package restapi -generate "types" \
-        ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-types.go
-      - |
-        oapi-codegen -package restapi -generate "chi-server" \
-        ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-server.go
-      - |
-        oapi-codegen -package restapi -generate "spec" \
-        ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-spec.go
+      - oapi-codegen -package restapi -generate "types" ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-types.go
+      - oapi-codegen -package restapi -generate "chi-server" ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-server.go
+      - oapi-codegen -package restapi -generate "spec" ./swagger/swagger.yml > ./gen/openapi/memeapi/restapi-spec.go
   
   fmt:
     desc: Format code
