--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,19 +9,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
-      - name: Build service
-        run:
-          docker build \
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push service
+        run: |
+          docker buildx build \
             --file service/Dockerfile \
             --tag ghcr.io/coop25/meme-index-api:latest \
+            --push \
             service
-
-      - name: push service
-        run: |
-          docker push ghcr.io/coop25/meme-index-api:latest
