--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,21 +9,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push service
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+      - name: 'Build Inventory Image'
         run: |
-          docker buildx build \
-            --file Dockerfile \  # Adjust the path to your Dockerfile if necessary
-            --tag ghcr.io/coop25/meme-index-api:latest \
-            --push \
-            .
+          docker build . --tag ghcr.io/coop25/meme-index-api:latest
+          docker push ghcr.io/coop25/meme-index-api:latest
