edit allowed origins to be an env var

--- a/sample.env
+++ b/sample.env
@@ -10,3 +10,4 @@ MINIO_ACCESS_KEY=minio
 MINIO_ACCESS_KEY_ID=minio123
 MINIO_BUCKET_NAME=memeindex
 MINIO_USE_SSL=false
+ORIGIN=http://localhost:3000
